--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,10 @@
   --padding: 0.5rem;
 }
 
+i {
+  font-size: 30px;
+}
+
 .navbar {
   background-color: #ffffff;
   border-bottom: 1px #2baf38 solid;
@@ -20,6 +24,7 @@
 .fixed-navbar {
 }
 .container {
+  position: relative;
   width: 85%;
   padding: var(--padding);
   margin: 0 auto;
@@ -47,6 +52,7 @@
 
 .navbar-section-2 {
   padding: 0.5rem 0;
+  /* position: relative; */
 }
 .nav-links {
   margin: "0 0 0 auto";
@@ -102,14 +108,26 @@
   border-radius: 6px;
   cursor: pointer;
 }
+
 .toggle-menu {
   width: 100vw;
   height: calc(100vh - 78px);
+  overflow-y: auto;
   position: absolute;
   bottom: 0;
   left: 0;
   z-index: 40;
   background-color: #4873b7;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.toggle-menu::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.toggle-menu {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 .toggle-menu > div:not(:last-child) {
   border-bottom: 1px solid rgb(255, 250, 250);
@@ -120,6 +138,27 @@
   color: #ffffff;
   padding: 0.8rem;
   font-size: 1.6rem;
+}
+
+.clean-service-section {
+  background-color: #f2f2f24d;
+  padding: 0 1rem !important;
+}
+.clean-service-section > div {
+  padding: 0.8rem;
+  font-size: 1.2rem;
+}
+.clean-service-section > div:not(:last-child) {
+  border-bottom: 1px solid rgb(255, 250, 250);
+}
+
+.clean-serivces-hover {
+  position: absolute;
+  top: 50;
+  margin: 0 auto;
+  width: 80%;
+  height: 400px;
+  background: #0087ca;
 }
 
 /* Media query */
@@ -140,9 +179,7 @@
   .myphone {
     display: none;
   }
-  .toggle-menu {
-    display: block !important;
-  }
+
   .toggle-menu-btn {
     display: block !important;
   }
