--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Nunito&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Lato", sans-serif;
+  font-family: "Nunito", sans-serif;
   border: none;
 }
 :root {
@@ -11,6 +14,9 @@
 
 i {
   font-size: 30px;
+}
+button {
+  background-color: transparent;
 }
 
 .navbar {
@@ -26,9 +32,8 @@ i {
 .container {
   position: relative;
   width: 85%;
-  padding: var(--padding);
+  /* padding: var(--padding); */
   margin: 0 auto;
-  gap: 0.8rem;
 }
 .phone-number {
   color: green;
@@ -38,6 +43,7 @@ i {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0.4rem;
 }
 .navbar-phone_section {
   align-items: center;
@@ -51,19 +57,27 @@ i {
 }
 
 .navbar-section-2 {
-  padding: 0.5rem 0;
+  /* padding: 0.5rem 0; */
+  height: 45px;
+  overflow: hidden;
   /* position: relative; */
 }
 .nav-links {
   margin: "0 0 0 auto";
   list-style: none;
   justify-content: end;
-  gap: 2.5rem;
+  /* padding: 1px; */
+  gap: 1.5rem;
 }
 .link {
+  padding: 0.6rem 0.5rem;
   color: #0087ca;
   font-size: 0.9rem;
   cursor: pointer;
+  transition: all ease-out 0.2s;
+}
+.link:hover {
+  border-bottom: 4px solid #0087ca;
 }
 
 .main-section {
@@ -79,7 +93,8 @@ i {
 }
 .heading-1 {
   color: #4078bc;
-  font-size: 3.5rem;
+  font-family: sans-serif;
+  font-size: 3.2rem;
 }
 .heading-2 {
   font-size: 1.8rem;
@@ -111,9 +126,10 @@ i {
 
 .toggle-menu {
   width: 100vw;
-  height: calc(100vh - 78px);
+  height: calc(100vh - 75px);
   overflow-y: auto;
-  position: absolute;
+  position: fixed;
+  padding: 0.5rem;
   bottom: 0;
   left: 0;
   z-index: 40;
@@ -134,9 +150,8 @@ i {
 }
 
 .toggle-menu > div {
-  font-weight: 600;
   color: #ffffff;
-  padding: 0.8rem;
+  padding: 0.8rem 2rem;
   font-size: 1.6rem;
 }
 
@@ -154,14 +169,111 @@ i {
 
 .clean-serivces-hover {
   position: absolute;
-  top: 50;
-  margin: 0 auto;
+  display: none;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 100;
   width: 80%;
-  height: 400px;
-  background: #0087ca;
+  height: 440px;
+  background-color: #337ab7;
+  color: #ffffff;
+  transform: translateX(-50%, -50%);
+  border-radius: 5px;
+  padding: 4rem 6rem;
+}
+.cleaning-services-hover-sections {
+  width: 44vw;
+  text-decoration: none;
+  color: #ffffff;
+}
+.cleaning-services-hover-sections,
+p {
+  padding: 0.8rem 0 0.8rem 1.2rem;
+}
+
+.cleaning-services-hover-section p > a {
+  font-size: 0.9rem;
+  text-decoration: none;
+  color: #ffffff;
+}
+.cleaning-services-hover-section p > a:hover {
+  color: #ffc122;
+  text-decoration: underline;
+}
+
+.clean-link:hover .clean-serivces-hover {
+  display: flex !important;
+  padding: 10px;
+}
+
+.footer-1 {
+  background-color: #222222;
+  padding: 5rem 0;
+  width: 100%;
+}
+.footer-1-container {
+  width: 80%;
+  margin: 0 auto;
+}
+.footer-1-container__imgs {
+  gap: 0.5rem;
+}
+.footer-2 {
+  /* text-align: center; */
+  align-items: center;
+  justify-content: center;
+  gap: 0.8rem;
+  background-color: #000;
+  color: #ffffff;
+  height: 110px;
+}
+.footer-1 > div,
+a {
+  text-decoration: none;
+  color: #ffffff;
+}
+.footer-2-links :hover {
+  color: #2baf38;
+}
+
+/* animations */
+.slide-bottom {
+  -webkit-animation: slide-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+/**
+ * ----------------------------------------
+ * animation slide-bottom
+ * ----------------------------------------
+ */
+@-webkit-keyframes slide-bottom {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(50px);
+    transform: translateY(50px);
+  }
+}
+@keyframes slide-bottom {
+  0% {
+    -webkit-transform: translateY(-50px);
+    transform: translateY(-50px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
 }
 
 /* Media query */
+@media screen and (min-width: 920px) {
+  .toggle-menu {
+    display: none;
+  }
+}
 
 @media screen and (max-width: 920px) {
   html {
@@ -182,5 +294,16 @@ i {
 
   .toggle-menu-btn {
     display: block !important;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .footer-1-container__imgs {
+    margin: 0 auto;
+  }
+  .footer-1-container__imgs > div {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
   }
 }
