--- a/css/utiles.css
+++ b/css/utiles.css
@@ -11,11 +11,15 @@
 .item-center {
   align-items: center;
 }
+.justify-center {
+ 
+}
 .justify-between {
   justify-content: space-between;
 }
+
 .gap-1 {
-  gap: 0.8rem;
+  gap: 0.9rem;
 }
 .gap-4 {
   gap: 1.8rem;
@@ -25,4 +29,29 @@
 }
 .curoser-pointer {
   cursor: pointer;
+}
+
+.footer-heading {
+  color: #fff;
+  font-size: 1.4rem;
+  border-bottom: 2px solid tomato;
+}
+
+.footer-1-container {
+  flex-wrap: wrap;
+}
+.footer-1-container > div {
+  padding: 1rem;
+}
+.footer-1-container__Service-links {
+  list-style: none;
+  padding: 0.8rem;
+}
+.footer-1-container__Service-links > li > a {
+  text-decoration: none;
+  color: #fff;
+}
+.footer-1-container__Service-links > li :hover {
+  color: #2baf38;
+  /* padding: 100px; */
 }
