--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,6 @@ button {
 
 .navbar-section-2 {
   /* padding: 0.5rem 0; */
-  height: 45px;
   overflow: hidden;
   /* position: relative; */
 }
@@ -70,7 +69,8 @@ button {
   gap: 1.5rem;
 }
 .link {
-  padding: 0.6rem 0.5rem;
+  height: 35px;
+  padding: 0rem 0.5rem;
   color: #0087ca;
   font-size: 0.9rem;
   cursor: pointer;
@@ -78,6 +78,10 @@ button {
 }
 .link:hover {
   border-bottom: 4px solid #0087ca;
+}
+.toggle-menu-contianer-sortBtn {
+  color: #ffffff;
+  padding: 0.3rem;
 }
 
 .main-section {
@@ -129,11 +133,12 @@ button {
   height: calc(100vh - 75px);
   overflow-y: auto;
   position: fixed;
-  padding: 0.5rem;
+  /* padding: 0.5rem; */
   bottom: 0;
   left: 0;
   z-index: 40;
   background-color: #4873b7;
+  transition: all ease 0.4s;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
 .toggle-menu::-webkit-scrollbar {
@@ -152,7 +157,7 @@ button {
 .toggle-menu > div {
   color: #ffffff;
   padding: 0.8rem 2rem;
-  font-size: 1.6rem;
+  font-size: 1.2rem;
 }
 
 .clean-service-section {
@@ -161,7 +166,7 @@ button {
 }
 .clean-service-section > div {
   padding: 0.8rem;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 .clean-service-section > div:not(:last-child) {
   border-bottom: 1px solid rgb(255, 250, 250);
@@ -169,22 +174,25 @@ button {
 
 .clean-serivces-hover {
   position: absolute;
-  display: none;
-  left: 50%;
+  /* visibility: hidden; */
+  display: none !important;
+  /* left: 50%; */
+  bottom: -27rem;
   transform: translateX(-50%);
-  bottom: 100;
-  width: 80%;
+  /* bottom: 110; */
+  width: 85%;
   height: 440px;
   background-color: #337ab7;
   color: #ffffff;
-  transform: translateX(-50%, -50%);
+  /* transform: translateX(-50%, -50%); */
   border-radius: 5px;
-  padding: 4rem 6rem;
+  padding: 0 4rem;
 }
 .cleaning-services-hover-sections {
-  width: 44vw;
-  text-decoration: none;
-  color: #ffffff;
+  /* padding: 4rem; */
+  width: 35vw;
+  /* text-decoration: none; */
+  /* color: #ffffff; */
 }
 .cleaning-services-hover-sections,
 p {
@@ -193,17 +201,18 @@ p {
 
 .cleaning-services-hover-section p > a {
   font-size: 0.9rem;
-  text-decoration: none;
-  color: #ffffff;
+  /* text-decoration: none; */
+  /* color: #ffffff; */
 }
 .cleaning-services-hover-section p > a:hover {
   color: #ffc122;
   text-decoration: underline;
 }
-
+.clean-link {
+}
 .clean-link:hover .clean-serivces-hover {
   display: flex !important;
-  padding: 10px;
+  /* visibility: visible; */
 }
 
 .footer-1 {
@@ -300,7 +309,7 @@ a {
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
   .footer-1-container > div {
     width: 100% !important;
     text-align: center;
