--- a/css/main.css
+++ b/css/main.css
@@ -262,6 +262,38 @@ a {
   width: 50%;
   color: #ffffff;
 }
+
+.feature-section {
+  background-color: #e6e6e6;
+}
+.feature-section-container {
+  width: 88%;
+  margin: 0 auto;
+  padding: 2rem;
+}
+.feature-section-1 > span {
+  display: inline-block;
+  background: #8b8b8b;
+  width: 100%;
+  height: 5px;
+}
+.feature-section-title {
+  color: #8b8b8b;
+  text-align: center;
+  width: 28rem;
+  font-size: 1.8rem;
+  font-weight: 600;
+  display: flex;
+}
+.feature-section-title > p {
+  padding: 0 !important;
+  margin: 0 auto;
+}
+.feature-container-img {
+  text-align: center;
+  border-bottom: 5px solid #8b8b8b;
+}
+
 /* animations */
 .slide-bottom {
   -webkit-animation: slide-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
@@ -324,9 +356,17 @@ a {
   .footer-1-container > div {
     width: 50%;
   }
+  .feature-section-container {
+    width: 92%;
+    padding: 1rem 0;
+  }
+  .feature-section-title {
+    width: 50%;
+    font-size: 1.6rem;
+  }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 680px) {
   .footer-1-container > div {
     width: 100% !important;
     text-align: center;
@@ -350,5 +390,16 @@ a {
     /* width: auto; */
     flex-direction: column;
     text-align: center;
+  }
+  .feature-section-container {
+    width: 100%;
+    padding: 1rem 0;
+  }
+  .feature-section-title {
+    width: 100%;
+    font-size: 1.5rem;
+  }
+  .feature-container-img > img {
+    width: 90% !important;
   }
 }
