--- a/css/main.css
+++ b/css/main.css
@@ -294,6 +294,190 @@ a {
   border-bottom: 5px solid #8b8b8b;
 }
 
+.services-section {
+  background-color: #f4f4f4;
+}
+.services-section-container {
+  /* width: 86%; */
+  margin: 0 auto;
+  padding: 2rem;
+}
+.services-section-header {
+  text-align: center;
+  /* width: 75%; */
+  margin: 0 auto;
+}
+.services-section-header p:nth-child(1) {
+  color: #2baf38;
+  font-size: 3.1em;
+}
+.services-section-header p:nth-child(2) {
+  /* color: #000000; */
+  font-size: 1.5em;
+  font-weight: 600;
+}
+.services-section-header p:nth-child(3) {
+  font-size: 1.5em;
+  /* font-weight: 600; */
+}
+.services-section-accordion-container {
+  width: 36%;
+  gap: 10px;
+  padding: 2rem;
+  height: auto;
+}
+.services-section-accordion {
+  padding: 2rem 0;
+}
+.services-section-accordion-header {
+  background-color: #2baf38;
+  color: #fff;
+  display: flex;
+  padding: 0.8rem 1rem;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 12px;
+  position: relative;
+  /* z-index: 9; */
+}
+.services-section-accordion-header::after {
+  content: "";
+  position: absolute;
+  height: 20px;
+  background-color: #e3e9dc;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+.fa-chevron-down {
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: #fff;
+}
+.services-section-accordion-content {
+  background-color: #e3e9dc;
+  color: #595959;
+  padding: 0 0.5rem;
+  border-radius: 0 0 12px 12px;
+}
+
+.callback-form-section {
+  background-color: #2baf38;
+}
+.callback-form-section-container {
+  width: 90%;
+  color: #fff;
+  padding: 1.2rem;
+  margin: 0 auto;
+}
+.callback-form-section-container-title {
+  font-size: 1.6rem;
+}
+.callback-form-section-container-input {
+  width: 250px;
+  outline: none;
+  height: 42px;
+  border-radius: 6px;
+  padding: 0 0.8rem;
+}
+.callback-form-section-container-btn {
+  height: 42px;
+  padding: 0 2rem;
+  font-size: 1.2rem;
+  cursor: pointer;
+  border-radius: 6px;
+  color: #fff;
+  background-color: #4078bc;
+  transition: all ease-out 0.4s;
+}
+.callback-form-section-container-btn:hover {
+  transform: scale(0.94);
+}
+
+.offerservice-section {
+  background-color: #eee;
+}
+.offerservice-section-container {
+  /* background-image: url("https://pristinegreencleaning.com/assets/images/Green-Carpet-Cleaning-Van-NYC-small-not.png"); */
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  padding: 4rem 0 0rem 4rem;
+}
+.service-container-img {
+  width: 60%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: center;
+}
+.service-container-img > img {
+  width: 100% !important;
+  transform: scale(1.4);
+  /* background-position: right; */
+}
+.offerservice-section-container-1 {
+  width: 60%;
+}
+.offerservice-section-container-1-title {
+  font-size: 2rem;
+  color: #4873b7;
+}
+.offerservice-section-list-container {
+  padding: 3rem;
+}
+.offerservice-section-list-container > ul {
+  color: #000;
+  /* padding: 2rem; */
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.offerservice-section-list-container > ul > li {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  list-style: none;
+}
+.offerservice-section-list-container > ul > li > a {
+  font-weight: 600;
+  color: #000000;
+  filter: drop-shadow(0 0 4px #9a8a8a);
+}
+
+.companyinfo-section {
+  background-color: #4078bc;
+}
+.companyinfo-section-container {
+  width: 80%;
+  padding: 3rem;
+  color: #ffffff;
+  text-align: center;
+  margin: auto;
+}
+
+.companyinfo-section-container-title {
+  width: 82%;
+  margin: 0 auto;
+  font-size: 2.4rem;
+}
+.callus-section {
+  background-color: #2baf38;
+}
+
+.callus-section-container {
+  width: 80%;
+  padding: 3rem;
+  color: #ffffff;
+  text-align: center;
+  margin: auto;
+}
+
 /* animations */
 .slide-bottom {
   -webkit-animation: slide-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
@@ -335,7 +519,7 @@ a {
 
 @media screen and (max-width: 940px) {
   html {
-    font-size: 14px;
+    font-size: 15px;
   }
   .container {
     width: 95%;
@@ -356,6 +540,10 @@ a {
   .footer-1-container > div {
     width: 50%;
   }
+  .footer-2-copyright {
+    text-align: center;
+  }
+
   .feature-section-container {
     width: 92%;
     padding: 1rem 0;
@@ -363,6 +551,61 @@ a {
   .feature-section-title {
     width: 50%;
     font-size: 1.6rem;
+  }
+  .services-section-header {
+    text-align: center;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .callback-form-section-container {
+    padding: 3rem 0;
+  }
+  .callback-form-section-container-1 {
+    flex-direction: column;
+    align-items: start !important;
+    gap: 1.6rem !important;
+  }
+  .callback-form-section-container-input {
+    width: 78% !important;
+  }
+  .callback-form-section-container-btn {
+    width: 200px !important;
+  }
+  .offerservice-section-container-1 {
+    width: 95%;
+    margin: auto;
+    justify-content: center;
+  }
+  .offerservice-section-container {
+    flex-direction: column;
+    padding: 3rem 0 0 0;
+  }
+  .offerservice-section-list-container {
+    justify-content: space-between;
+    padding: 3rem 5rem;
+  }
+  .service-container-img {
+    width: 100%;
+
+    /* background-color: #000000; */
+  }
+  .service-container-img > img {
+    width: 70% !important;
+    transform: scale(1);
+    /* background-position: right; */
+  }
+  .offerservice-section-container-1-title {
+    text-align: center;
+  }
+  .companyinfo-section-container {
+    width: 100%;
+    padding: 1rem 0;
+    text-align: start;
+  }
+  .companyinfo-section-container-title {
+    width: 100%;
+    padding: 0 0 0 1rem;
+    font-size: 1.5rem;
   }
 }
 
@@ -390,6 +633,7 @@ a {
     /* width: auto; */
     flex-direction: column;
     text-align: center;
+    font-size: 0.1rem;
   }
   .feature-section-container {
     width: 100%;
@@ -401,5 +645,65 @@ a {
   }
   .feature-container-img > img {
     width: 90% !important;
+    height: 70px;
+  }
+  .services-section-container {
+    width: 100% !important;
+    margin: 0 auto;
+    padding: 1rem;
+  }
+  .services-section-header {
+    text-align: center;
+    font-size: 0.8rem;
+    width: 95%;
+    margin: 0 auto;
+  }
+  .services-section-header > p {
+    padding: 0.5rem 0 !important;
+  }
+  .service-section-img > img {
+    width: 100% !important;
+  }
+  .services-section-accordion {
+    flex-direction: column-reverse;
+  }
+  .services-section-accordion-container {
+    width: 100%;
+    padding: 2rem 0;
+  }
+  .callback-form-section-container {
+    padding: 3rem 0;
+  }
+  .callback-form-section-container-1 {
+    flex-direction: column;
+    gap: 1.6rem !important;
+  }
+  .callback-form-section-container-input {
+    width: 100% !important;
+  }
+  .callback-form-section-container-btn {
+    width: 100% !important;
+  }
+  .offerservice-section-container {
+    /* object-fit: fill; */
+    /* background: #6f6c6c; */
+    /* height: 100vh !important; */
+    background-size: contain;
+    background-position: bottom left !important;
+  }
+  .offerservice-section-list-container {
+    justify-content: space-between;
+    padding: 2rem 0;
+  }
+  .offerservice-section-container-1-title {
+    text-align: start;
+    font-size: 1.4rem;
+    padding: 0 0 0 0.5rem;
+  }
+  .service-container-img > img {
+    width: 100% !important;
+  }
+  .offerservice-section-list-container > ul > li > a {
+    font-size: 0.9rem;
   }
 }
