coupon page done

--- a/css/utiles.css
+++ b/css/utiles.css
@@ -205,9 +205,28 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
 }
+.coupons-container {
+  overflow-y: auto !important;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.coupons-container::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.coupons-container {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
 .coupons-lists > li {
   list-style: none;
+  /* width: 300px; */
+  /* height: fit-content; */
+  font-size: 0.9rem;
   /* border-style: groove; */
   /* height: auto ; */
   border: dashed 2px #fff !important;
+}
+.coupons-lists > li > p {
+  margin: 0 !important;
 }
