--- a/css/main.css
+++ b/css/main.css
@@ -342,18 +342,37 @@ a {
   height: auto;
 }
 .services-section-accordion {
-  padding: 2rem 0;
+  /* padding: 2rem 0; */
 }
+/* .accordion-button:not(.collapsed) {
+  color: var(--bs-accordion-active-color);
+  background-color: var(--bs-accordion-active-bg);
+  box-shadow: none !important;
+} */
+.accordion-button:focus {
+  z-index: 3;
+  border-color: transparent !important;
+  outline: 0 !important;
+  box-shadow: none !important;
+}
+
 .services-section-accordion-header {
-  background-color: #2baf38;
-  color: #fff;
-  display: flex;
-  padding: 0.8rem 1rem;
-  justify-content: space-between;
-  align-items: center;
-  border-radius: 12px;
-  position: relative;
+  background-color: #2baf38 !important;
+  color: #fff !important;
+  border-radius: 6px !important;
+  /* position: relative; */
   /* z-index: 9; */
+}
+.services-section-accordion-header::after {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
+  filter: brightness(0) invert(1);
+}
+.accordion-body > p {
+  color: #565656;
+}
+/* .services-section-accordion-header > button {
+  width: -moz-fit-content !important;
+  width: fit-content !important;
 }
 .services-section-accordion-header::after {
   content: "";
@@ -364,7 +383,7 @@ a {
   bottom: 0;
   left: 0;
   z-index: -1;
-}
+} */
 .fa-chevron-down {
   cursor: pointer;
   font-size: 1.2rem;
@@ -385,6 +404,9 @@ a {
   color: #fff;
   padding: 1.2rem;
   margin: 0 auto;
+}
+.callback-form-section-container-1 {
+  gap: 2rem !important;
 }
 .callback-form-section-container-title {
   font-size: 1.6rem;
@@ -726,7 +748,7 @@ a {
   }
   .callback-form-section-container-1 {
     flex-direction: column;
-    gap: 1.6rem !important;
+    gap: 1rem !important;
   }
   .callback-form-section-container-input {
     width: 100% !important;
