--- a/css/utiles.css
+++ b/css/utiles.css
@@ -270,3 +270,33 @@
   background-color: #4873b7 !important;
   color: #fff !important;
 }
+
+/* Animations */
+.phone-vibrate {
+  animation: vibrate 0.5s infinite;
+}
+@media screen and (max-width: 500px) {
+  .phone-vibrate {
+    height: 300px;
+  }
+}
+
+@keyframes vibrate {
+  0% {
+    transform: translate(0, 0);
+  }
+  25% {
+    transform: translate(-2px, 2px);
+  }
+  50% {
+    transform: translate(0, -4px);
+  }
+  75% {
+    transform: translate(2px, 2px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
+/* Animations ends here */
